--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
         <h3>Our Team</h3>
         <ul>
           <li>
-            <img src="/images/mark.jpg" alt="Mark" width="264" />
+            <img src="./images/mark.jpg" alt="Mark" width="264" />
             <h3>Mark Guerrero</h3>
             <p>Product Designer</p>
           </li>
